06-21-2025/miniupnpc-06-21-2025.log
--2025-06-21 07:11:54--  http://miniupnp.free.fr/files/miniupnpc-20091016.tar.gz
Resolving miniupnp.free.fr (miniupnp.free.fr)... 212.27.63.162
Connecting to miniupnp.free.fr (miniupnp.free.fr)|212.27.63.162|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 41792 (41K) [application/x-gzip]
Saving to: 'miniupnpc-20091016.tar.gz'

     0K .......... .......... .......... ..........           100%  451K=0.09s

2025-06-21 07:11:54 (451 KB/s) - 'miniupnpc-20091016.tar.gz' saved [41792/41792]

miniupnpc-20091016/Makefile
miniupnpc-20091016/igd_desc_parse.c
miniupnpc-20091016/igd_desc_parse.h
miniupnpc-20091016/miniwget.c
miniupnpc-20091016/miniwget.h
miniupnpc-20091016/minixml.c
miniupnpc-20091016/minixml.h
miniupnpc-20091016/upnpc.c
miniupnpc-20091016/testminixml.c
miniupnpc-20091016/minisoap.c
miniupnpc-20091016/minisoap.h
miniupnpc-20091016/miniupnpc.c
miniupnpc-20091016/miniupnpc.h
miniupnpc-20091016/README
miniupnpc-20091016/LICENCE
miniupnpc-20091016/upnpcommands.c
miniupnpc-20091016/upnpreplyparse.c
miniupnpc-20091016/upnpreplyparse.h
miniupnpc-20091016/upnpcommands.h
miniupnpc-20091016/Makefile.mingw
miniupnpc-20091016/bsdqueue.h
miniupnpc-20091016/Changelog.txt
miniupnpc-20091016/minixmlvalid.c
miniupnpc-20091016/declspec.h
miniupnpc-20091016/mingw32make.bat
miniupnpc-20091016/testupnpreplyparse.c
miniupnpc-20091016/miniupnpcmodule.c
miniupnpc-20091016/pymoduletest.py
miniupnpc-20091016/setup.py
miniupnpc-20091016/setupmingw32.py
miniupnpc-20091016/minissdpc.h
miniupnpc-20091016/minissdpc.c
miniupnpc-20091016/man3/miniupnpc.3
miniupnpc-20091016/upnperrors.h
miniupnpc-20091016/upnperrors.c
miniupnpc-20091016/testigddescparse.c
miniupnpc-20091016/testupnpigd.py
miniupnpc-20091016/miniupnpc.def
miniupnpc-20091016/codelength.h
miniupnpc-20091016/miniupnpcstrings.h.in
miniupnpc-20091016/updateminiupnpcstrings.sh
cc -O2    -c -o minixmlvalid.o minixmlvalid.c
cc -O2    -c -o minixml.o minixml.c
/bin/sh updateminiupnpcstrings.sh
cc -O2    -c -o igd_desc_parse.o igd_desc_parse.c
cc -O2    -c -o miniupnpc.o miniupnpc.c
cc -O2    -c -o upnpreplyparse.o upnpreplyparse.c
cc -O2    -c -o upnpcommands.o upnpcommands.c
cc -O2    -c -o minissdpc.o minissdpc.c
cc -O2    -c -o upnperrors.o upnperrors.c
cc -O2    -c -o upnpc.o upnpc.c
cc -O2    -c -o testminixml.o testminixml.c
cc -O2    -c -o testupnpreplyparse.o testupnpreplyparse.c
cc -O2    -c -o testigddescparse.o testigddescparse.c
which: no lsb_release in (/usr/bin:/bin:/usr/sbin/)
Detected OS [Linux] version [6.15.1-tucana]
setting OS_STRING macro value to Linux/6.15.1-tucana in miniupnpcstrings.h.
cc -O2    -c -o miniwget.o miniwget.c
cc -O2    -c -o minisoap.o minisoap.c
cc   minixmlvalid.o minixml.o   -o minixmlvalid
cc   testminixml.o minixml.o igd_desc_parse.o   -o testminixml
cc   testupnpreplyparse.o minixml.o upnpreplyparse.o   -o testupnpreplyparse
cc   testigddescparse.o igd_desc_parse.o minixml.o   -o testigddescparse
minixml validation test
./minixmlvalid
14 events
touch validateminixml
ar crs libminiupnpc.a miniwget.o minixml.o igd_desc_parse.o minisoap.o miniupnpc.o upnpreplyparse.o upnpcommands.o minissdpc.o upnperrors.o
cc -shared -Wl,-soname,libminiupnpc.so.4 -o libminiupnpc.so miniwget.o minixml.o igd_desc_parse.o minisoap.o miniupnpc.o upnpreplyparse.o upnpcommands.o minissdpc.o upnperrors.o
cc -o upnpc-static upnpc.o libminiupnpc.a
cc -o upnpc-shared upnpc.o libminiupnpc.so
miniupnpcmodule.c: In function ‘UPnPObject_dealloc’:
miniupnpcmodule.c:62:13: error: ‘UPnPObject’ has no member named ‘ob_type’
   62 |         self->ob_type->tp_free((PyObject*)self);
      |             ^~
In file included from /usr/include/python3.13/Python.h:72,
                 from miniupnpcmodule.c:8:
miniupnpcmodule.c: At top level:
/usr/include/python3.13/object.h:138:9: error: initialization of ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
  138 |         (type)                      \
      |         ^
miniupnpcmodule.c:424:5: note: in expansion of macro ‘PyObject_HEAD_INIT’
  424 |     PyObject_HEAD_INIT(NULL)
      |     ^~~~~~~~~~~~~~~~~~
/usr/include/python3.13/object.h:138:9: note: (near initialization for ‘UPnPType.ob_base.ob_size’)
  138 |         (type)                      \
      |         ^
miniupnpcmodule.c:424:5: note: in expansion of macro ‘PyObject_HEAD_INIT’
  424 |     PyObject_HEAD_INIT(NULL)
      |     ^~~~~~~~~~~~~~~~~~
miniupnpcmodule.c:426:5: error: initialization of ‘long int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  426 |     "miniupnpc.UPnP",          /*tp_name*/
      |     ^~~~~~~~~~~~~~~~
miniupnpcmodule.c:426:5: note: (near initialization for ‘UPnPType.tp_basicsize’)
miniupnpcmodule.c:429:5: error: initialization of ‘long int’ from ‘void (*)(PyObject *)’ {aka ‘void (*)(struct _object *)’} makes integer from pointer without a cast [-Wint-conversion]
  429 |     (destructor)UPnPObject_dealloc,/*tp_dealloc*/
      |     ^
miniupnpcmodule.c:429:5: note: (near initialization for ‘UPnPType.tp_vectorcall_offset’)
miniupnpcmodule.c:445:5: error: initialization of ‘int (*)(PyObject *, int (*)(PyObject *, void *), void *)’ {aka ‘int (*)(struct _object *, int (*)(struct _object *, void *), void *)’} from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
  445 |     "UPnP objects",            /* tp_doc */
      |     ^~~~~~~~~~~~~~
miniupnpcmodule.c:445:5: note: (near initialization for ‘UPnPType.tp_traverse’)
miniupnpcmodule.c:452:5: error: initialization of ‘PyMemberDef *’ from incompatible pointer type ‘PyMethodDef *’ [-Wincompatible-pointer-types]
  452 |     UPnP_methods,              /* tp_methods */
      |     ^~~~~~~~~~~~
miniupnpcmodule.c:452:5: note: (near initialization for ‘UPnPType.tp_members’)
miniupnpcmodule.c:453:5: error: initialization of ‘PyGetSetDef *’ from incompatible pointer type ‘PyMemberDef *’ [-Wincompatible-pointer-types]
  453 |     UPnP_members,              /* tp_members */
      |     ^~~~~~~~~~~~
miniupnpcmodule.c:453:5: note: (near initialization for ‘UPnPType.tp_getset’)
miniupnpcmodule.c:463:5: error: initialization of ‘void (*)(void *)’ from incompatible pointer type ‘PyObject * (*)(PyTypeObject *, PyObject *, PyObject *)’ {aka ‘struct _object * (*)(struct _typeobject *, struct _object *, struct _object *)’} [-Wincompatible-pointer-types]
  463 |     PyType_GenericNew,/*UPnP_new,*/      /* tp_new */
      |     ^~~~~~~~~~~~~~~~~
miniupnpcmodule.c:463:5: note: (near initialization for ‘UPnPType.tp_free’)
miniupnpcmodule.c: In function ‘initminiupnpc’:
miniupnpcmodule.c:486:9: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
  486 |         return;
      |         ^~~~~~
miniupnpcmodule.c:478:1: note: declared here
  478 | initminiupnpc(void)
      | ^~~~~~~~~~~~~
miniupnpcmodule.c:488:9: error: implicit declaration of function ‘Py_InitModule3’ [-Wimplicit-function-declaration]
  488 |     m = Py_InitModule3("miniupnpc", miniupnpc_methods,
      |         ^~~~~~~~~~~~~~
miniupnpcmodule.c:488:7: error: assignment to ‘PyObject *’ {aka ‘struct _object *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  488 |     m = Py_InitModule3("miniupnpc", miniupnpc_methods,
      |       ^
error: command '/usr/bin/gcc' failed with exit code 1
